# scheval

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
scripts/: bump-version.sh
src/: lib.rs  main.rs  test_utils.rs
src/features/: mod.rs  suffix.rs  vscode.rs
src/include/: mod.rs  suffix.rs  vscode.rs
tests/: integration_test.rs
tests/data/: foo_schema.json  receipts.schema.json
tests/data/nested1/nested2/: abc.foo.json
tests/data/receipts/: 0.excluded.json  2.json
