[package]
name = "scheval"
version = "0.1.0"
edition = "2021"
include = ["/src", "LICENSE", "README.md"]
repository = "https://github.com/PRO-2684/scheval"
license = "MIT"
readme = "README.md"
description = "A fast and *smart* command-line tool for JSON Schema validation, powered by the `jsonschema` crate."
keywords = ["json", "schema", "validation", "cli", "command-line"]

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
jsonc-parser = { version = "0.26.2", features = ["serde"] }
jsonschema = "0.26.2"
serde_json = "1.0.134"
