[package]
name = "scheval"
version = "0.1.1"
edition = "2021"
include = ["/src", "LICENSE", "README.md"]
repository = "https://github.com/PRO-2684/scheval"
license = "MIT"
readme = "README.md"
description = "A fast and *smart* command-line tool for JSON Schema validation, powered by the `jsonschema` crate."
keywords = ["json", "schema", "validation", "cli", "command-line"]

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
globwalk = "0.9.1"
jsonc-parser = { version = "0.26.2", features = ["serde"] }
jsonschema = "0.26.2"
serde_json = "1.0.134"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install"]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
